// Copyright 2018 Red Hat, Inc.
// Copyright (c) 2018 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// This contains the core Network Service Mesh API definitions for external
// consumption via gRPC protobufs.

syntax = "proto3";

package networkservice;

option go_package = "networkservice";

import "github.com/networkservicemesh/networkservicemesh/controlplane/api/connection/connection.proto";
import "ptypes/empty/empty.proto";

message NetworkServiceRequest {
  connection.Connection connection = 1;
  repeated connection.Mechanism mechanism_preferences = 2;
}

service NetworkService {
  rpc Request(NetworkServiceRequest) returns (connection.Connection);
  rpc Close(connection.Connection) returns (google.protobuf.Empty);
}
